# AeroSandbox

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_MASTER_LIST.md  CONTRIBUTING.md  ExampleAirplanes.py  ExampleWingGeom.stl  Firefly.py  INSTALLATION.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  _config.yml  classes.py  examples.py  functionalapproach.py  makeConventional.py  publish_to_pypi.bat  pyproject.toml  requirements.txt  sandbox.py  setup.cfg  setup.py  simulatedannealing.py  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish-on-master-push.yml  run-pytest-with-extras.yml  run-pytest.yml
AeroSandbox/: Aerodynamics.py  Geometry.py  Performance.py  Plotting.py  __init__.py
AeroSandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Classes/: Aerodynamics.py  Geometry.py  Performance.py  Plotting.py  __init__.py
TestCases/: Conventional.py  Conventional_Airplane_draw_test.py  Conventional_tilted_geom.py  ExampleAirplanes-Conventional.xfl  ExampleAirplanes.py  Inverted_T.py  Simple_Airplane.py  Simple_Airplane_Nondimensional_Test.py  Simplest_Airplane.py  XFLR_Default.py  airfoil_test.py  autograd_test.py  camber_test.py  draw_conventional.py  op_point_test.py  sideslip_test.py  simple_airplane_test.py  vlm1_XFLR5_default.py  vlm1_camber_and_twist_test.py  vlm1_camber_and_twist_test.xfl  vlm1_camber_test.py  vlm1_conventional.py  vlm1_conventional.xfl  vlm1_conventional_complex_differencing.py  vlm1_conventional_tilted_geom.py  vlm1_conventional_tilted_geom.xfl  vlm1_inverted_T.py  vlm1_sideslip_test.py  vlm1_simple_airplane.py  vlm1_test.py
aerosandbox/: README.md  __init__.py  _version.py  aerodynamics.py  casadi_helpers.py  common.py  geometry.py  library.py  performance.py  plotting.py  test_dependencies.py  visualization.py  weights-notreadytouse.py  weights.py
aerosandbox/aerodynamics/: __init__.py  aerodynamics.py  buildup.py  casll1.py  casll1_backup.py  casll1_deprecated_no_fuse.py  casvlm1.py  panel1.py  vlm2.py  vlm3.py  vlm4.py
aerosandbox/aerodynamics_2D/: thwaites_testing.py
aerosandbox/aerodynamics_3D/: buildup.py  casll1.py  casvlm1.py
aerosandbox/airfoils/: __init__.py
aerosandbox/atmosphere/: README.md  __init__.py  _diff_atmo_functions.py  _isa_atmo_functions.py  atmosphere.py  isa_atmosphere.py  test_atmosphere.py
aerosandbox/dynamics/: README.md  __init__.py  common.py  common_3D.py  common_rigid_body.py  dynamics.py  equations_of_motion.py  flight_dynamics.py  free_body_dynamics.py  utilities.py
aerosandbox/geometry/: __init__.py  airfoil.py  airplane.py  common.py  fuselage.py  mass_properties.py  massproperties.py  mesh_utilities.py  polygon.py  propulsor.py  test_airfoil.py  wing.py
aerosandbox/in_progress/: interfaces.py  weights-notreadytouse.py
aerosandbox/legacy_aerodynamics/: panel1.py  vlm1.py  vlm2.py  vlm3.py
aerosandbox/modeling/: __init__.py  black_box.py  blackbox.py  fitting.py  interpolation.py  interpolation_unstructured.py  surrogate_model.py
aerosandbox/numpy/: __init__.py  arithmetic.py  arithmetic_dyadic.py  arithmetic_monadic.py  array.py  calculus.py  conditionals.py  determine_type.py  finite_difference_operators.py  integrate.py  integrate_discrete.py  interpolate.py  linalg.py  linalg_top_level.py  logicals.py  rotations.py  spacing.py  surrogate_model_tools.py  trig.py  typing.py
aerosandbox/optimization/: __init__.py  opti.py  test_analytical_wing_aerostructures.py  test_opti_analytical_wing_aerostructures.py  test_opti_hanging_chain.py  test_opti_parametric_sensitivites.py  test_opti_rosenbrock.py  test_opti_save_load.py  test_optimal_control.py  test_optimization.py  test_optimization_basics.py
aerosandbox/performance/: __init__.py  operating_point.py
aerosandbox/scripts/: airfoil_comparison.py
aerosandbox/structures/: __init__.py  beams.py  beams2D.py  buckling.py  materials.py  simple_beam.py  simple_beam_opt.py  simple_beam_opt_daedalus_calibration.py  tube_spar_bending.py  wing_structure.py
aerosandbox/tools/: README.md  __init__.py  carpet_plot_utils.py  casadi_functions.py  casadi_tools.py  code_benchmarking.py  fitting.py  inspect_tools.py  miscellaneous.py  pretty_plots.py  python.py  string_formatting.py  sympy_interactive.py  test_fitting.py  units.py  webplotdigitizer_reader.py
aerosandbox/visualization/: __init__.py  carpet_plot_utils.py  matplotlib.py  plotly.py  plotly_Figure3D.py
aerosandbox_legacy/: README.md  performance.py  plotting.py  setup.py
aerosandbox_legacy_v0/: __init__.py  deprecated_functions.py  geometry.py  requirements.txt  weights.py
development/: force_on_a_doublet.mlx  linesource_by_radials.mlx
docker/: Dockerfile  README  aerodesign.ipynb  xfoil.patch
docs/: conf.py  index.rst  requirements.txt
examples/: airfoil_test.py  casll1_conventional_analysis_SAND.py  casll1_conventional_analysis_point.py  casll1_firefly_X_tail_test.py  casll1_firefly_point.py  casll1_flat_plate_point_convergence_test.py  casll1_fuselage_simple_analysis_point.py  casll1_spanload_optimization_test.py  casll1_swept_plate_point.py  casvlm1_V_plate_point.py  casvlm1_avl_plane_SAND.py  casvlm1_conventional_SAND.py  casvlm1_conventional_analysis_point.py  casvlm1_flat_plate_point.py  casvlm1_swept_plate_point.py  draw_conventional.py  flat_plate.xfl  gradient_test_vlm1.py  gradient_test_vlm2.py  panel1_conventional.py  panel1_simple_airplane.py  run_all_tests.py  simple_example.py  swept_plate.avl  vlm1_XFLR5_default.py  vlm1_XFLR5_default.xfl  vlm1_camber_and_twist_test.py  vlm1_camber_test.py  vlm1_conventional.py  vlm1_conventional_tilted_geom.py  vlm1_sideslip_test.py  vlm1_simple_airplane.py  vlm2_conventional.py  vlm2_conventional_stability_derivatives.py  vlm2_conventional_with_control_surfaces.py  vlm2_tapered_wing_optimization.py  vlm3_conventional.py  vlm4_conventional.py  vlm4_debug.py
studies/: README.md  autodiff_for_design_resources.md
tutorial/: README.md  test_all_tutorials.py
(+867 files in other folders)
