[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AeroSandbox"
version = "4.2.9"
description = "AeroSandbox is a Python package that helps you design and optimize aircraft and other engineered systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Peter Sharpe", email = "pds@mit.edu" }
]
keywords = [
    "aerodynamics",
    "airplane",
    "cfd",
    "mdo",
    "mdao",
    "aircraft",
    "design",
    "aerospace",
    "optimization",
    "automatic differentiation",
    "structures",
    "propulsion",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "casadi>=3.7.2",
    "dill>=0.4.0",
    "matplotlib>=3.10.7",
    "neuralfoil>=0.3.0,<0.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sortedcontainers>=2.4.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
full = [
    "cadquery>=2.6.1",
    "plotly>=6.4.0",
    "pyvista>=0.46.4",
    "shapely>=2.1.2",
    "sympy>=1.14.0",
    "trimesh>=4.9.0",
]
test = [
    "nbval>=0.11.0",
    "openpyxl>=3.1.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "shapely>=2.1.2",
]
docs = [
    "furo>=2025.9.25",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
]

[project.urls]
Homepage = "https://peterdsharpe.github.io/AeroSandbox/"
Source = "https://github.com/peterdsharpe/AeroSandbox"
"Bug Reports" = "https://github.com/peterdsharpe/AeroSandbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["aerosandbox"]

[tool.hatch.build.targets.sdist]
include = [
    "/aerosandbox",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE.txt",
]

[dependency-groups]
dev = [
    "cadquery>=2.6.1",
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "openpyxl>=3.1.5",
    "plotly>=6.4.0",
    "ptest>=2.0.3",
    "pytest-cov>=7.0.0",
    "pyvista>=0.46.4",
    "shapely>=2.1.2",
    "sympy>=1.14.0",
    "trimesh>=4.9.0",
]

[tool.ruff]
per-file-ignores = { "*.ipynb" = ["E402"] }
